kernel/pbd2/G4log2
make[1]: Entering directory '/WhirlPool/pSeries41/Orion/kernel/pbd2'
===> src/platform/ofpower4/prom.cc
cd src/platform/ofpower4/ &&  gcc  -nostdinc -I/WhirlPool/pSeries41/Orion/kernel/pbd2/include -I/WhirlPool/pSeries41/Orion/kernel/src -I/WhirlPool/pSeries41/Orion/kernel/src/generic -I/usr/lib/gcc/powerpc64le-linux-gnu/9/include/ -Upowerpc64 -Uppc970 -Uofg5 -Uv4 -Urr -D__ARCH__=powerpc64 -D__CPU__=ppc970 -D__PLATFORM__=ofg5 -D__API__=v4 -D__SCHED__=rr -imacros /WhirlPool/pSeries41/Orion/kernel/pbd2/config/config.h -imacros /WhirlPool/pSeries41/Orion/kernel/src/generic/macros.h -include /WhirlPool/pSeries41/Orion/kernel/src/generic/config.h  -include /WhirlPool/pSeries41/Orion/kernel/src/generic/types.h -fno-rtti -fno-builtin  -fomit-frame-pointer -fno-exceptions -Wall -Wno-non-virtual-dtor -Wno-format -O2 -mpowerpc64 -msoft-float -mno-minimal-toc  -mcpu=power4   -Wconversion  -c /WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc
In file included from /WhirlPool/pSeries41/Orion/kernel/src/api/v4/kernelinterface.h:50,
                 from /WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:39:
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/memdesc.h: In member function ‘void memdesc_t::set(memdesc_t::type_e, word_t, bool, addr_t, addr_t)’:
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/memdesc.h:120:14: warning: conversion from ‘word_t’ {aka ‘long unsigned int’} to ‘unsigned char:4’ may change value [-Wconversion]
  120 |      _type = type;
      |              ^~~~
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/memdesc.h:121:14: warning: conversion from ‘word_t’ {aka ‘long unsigned int’} to ‘unsigned char:4’ may change value [-Wconversion]
  121 |      _t    = t;
      |              ^
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/memdesc.h:123:29: warning: conversion from ‘word_t’ {aka ‘long unsigned int’} to ‘long unsigned int:54’ may change value [-Wconversion]
  123 |      _low  = ((word_t) low) >> 10;
      |              ~~~~~~~~~~~~~~~^~~~~
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/memdesc.h:124:30: warning: conversion from ‘word_t’ {aka ‘long unsigned int’} to ‘long unsigned int:54’ may change value [-Wconversion]
  124 |      _high = ((word_t) high) >> 10;
      |              ~~~~~~~~~~~~~~~~^~~~~
In file included from /WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:39:
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/kernelinterface.h: In member function ‘void thread_info_t::set_user_base(word_t)’:
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/kernelinterface.h:173:52: warning: conversion from ‘word_t’ {aka ‘long unsigned int’} to ‘short unsigned int:12’ may change value [-Wconversion]
  173 |     void set_user_base(word_t base)  { user_base = base; }
      |                                                    ^~~~
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/kernelinterface.h: In member function ‘void thread_info_t::set_system_base(word_t)’:
/WhirlPool/pSeries41/Orion/kernel/src/api/v4/kernelinterface.h:174:56: warning: conversion from ‘word_t’ {aka ‘long unsigned int’} to ‘short unsigned int:12’ may change value [-Wconversion]
  174 |     void set_system_base(word_t base)  { system_base = base; }
      |                                                        ^~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc: In function ‘void of1275_tree_map(addr_t, addr_t)’:
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:53:21: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   53 |     prom_print_hex( "1275 tree found at", (word_t)vaddr );
      |                     ^~~~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:54:16: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   54 |     prom_puts( "\n\r" );
      |                ^~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc: In function ‘void of1275_tree_init(kernel_interface_page_t*)’:
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:71:24: error: ‘OF1275_KIP_TYPE’ was not declared in this scope
   71 |  if( (mdesc->type() == OF1275_KIP_TYPE) &&
      |                        ^~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:72:24: error: ‘OF1275_KIP_SUBTYPE’ was not declared in this scope
   72 |   (mdesc->subtype() == OF1275_KIP_SUBTYPE) )
      |                        ^~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:80:16: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   80 |     prom_puts( "*** Error: the boot loader didn't supply a copy of the\n\r"
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   81 |         "*** Open Firmware device tree!\n\r" );
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc: In function ‘void init_plat(word_t)’:
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:109:33: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  109 |     if (cpu == 0x35) prom_puts( "Detected Power4 (Spinnaker) " );
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:110:38: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  110 |     else if (cpu == 0x38) prom_puts( "Detected Power4+ " );
      |                                      ^~~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:111:38: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  111 |     else if (cpu == 0x39) prom_puts( "Detected PPC970 " );
      |                                      ^~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:112:38: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  112 |     else if (cpu == 0x3c) prom_puts( "Detected PPC970FX " );
      |                                      ^~~~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:113:38: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  113 |     else if (cpu == 0x40) prom_puts( "Detected Power3 " );
      |                                      ^~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:114:38: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  114 |     else if (cpu == 0x41) prom_puts( "Detected Power3+ " );
      |                                      ^~~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:116:18: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  116 |  prom_print_hex( "Unknown Processor Version", (pvr >> 16) & 0xffff );
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:117:13: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  117 |  prom_exit( "\n\r" );
      |             ^~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:119:21: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  119 |     prom_print_hex( "Revision", (pvr & 0xffff) );
      |                     ^~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:120:16: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  120 |     prom_puts( "\n\r" );
      |                ^~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:127:13: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  127 |  prom_exit( "Unable get property \"cpu\" in /chosen\n\r" );
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:140:21: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  140 |     prom_print_hex( "Boot cpu is", boot_cpuid );
      |                     ^~~~~~~~~~~~~
/WhirlPool/pSeries41/Orion/kernel/src/platform/ofpower4/prom.cc:141:16: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  141 |     prom_puts( "\n\r" );
      |                ^~~~~~
make[1]: *** [/WhirlPool/pSeries41/Orion/kernel/Mk/Makeconf:208: src/platform/ofpower4/prom.o] Error 1
make[1]: Leaving directory '/WhirlPool/pSeries41/Orion/kernel/pbd2'
make: *** [Makefile:38: all] Error 2
